# Resume_Score-AI-model

./: README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html
