[project]
name = "resume-score"
version = "0.1.0"
description = "This project is about ATS score of resume"
authors = [
    {name = "Saravana KD"}
]
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "sentence-transformers (>=5.4.0,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pymupdf (>=1.27.2.2,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
